# mcp-weather-simple

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  fat_tools.py  fat_tools_lean.py  fat_tools_map.py  mcphost.config.json  pyproject.toml  server.py
.github/workflows/: build.yml  eval.yml
docs/: tool-catalog-scaling.md
k8s/: deployment.yaml  ingressroute.yaml  kustomization.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml
scripts/: eval.sh
tests/: test_server.py
tests/integration/: cases.yaml  eval_tool_calling.py
