[project]
name = "mcp-weather-simple"
version = "0.2.0"
description = "Simple MCP server that exposes weather tools (Open-Meteo, no API key)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
# Integration / eval harness deps (see tests/integration/ and
# .github/workflows/eval.yml). Split from `test` so the unit-suite
# keeps installing fast; CI pulls both with `uv sync --extra test --extra eval`.
eval = [
    "pyyaml>=6.0",
]

[project.scripts]
mcp-weather-simple = "server:mcp.run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
